--- a/templates/upload.html
+++ b/templates/upload.html
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
                 <label>描述</label>
-                <textarea name="description" class="form-control" required></textarea>
+                <textarea name="description" class="form-control" required rows="10"></textarea>
             </div>
             <div class="form-group mt-3">
                 <label>标签 (可选):</label>
